apps/infra/minio-operator/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-operator
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio.vulf.haus`)
      services:
        - name: console
          port: 9090
  tls:
    # shared wildcard cert for *.vulf.haus
    secretName: cm-shared-wildcard-vulfhaus-tls
